Issue #11899 - fixed image align padding and height width attribute not appearing on node page

--- a/profile/themes/os_base/scss/component/_node.scss
+++ b/profile/themes/os_base/scss/component/_node.scss
@@ -5,7 +5,6 @@
 .is-unpublished {
   background-color: #fff4f4;
 }
-
 .node-preview-container {
   margin-top: 0;
   .node-preview-backlink {
@@ -13,7 +12,14 @@
     color: $color-link1;
   }
 }
-
 .node-preview-form-select {
   padding: ($grid-gutter-width / 2);
+}
+.field--name-body {
+  img[style*="left"] {
+    padding-right: 15px;
+  }
+  img[style*="right"] {
+    padding-left: 15px;
+  }
 }
